<resources>
    <string name="app_name">Lab8Exam01</string>
    <string name="username">用户名: </string>
    <string name="password">密码:</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>

    <string name="time">2020-06-03</string>
    <string name="text">这是一些内容</string>

    <string name="user_id">用户id: </string>
    <string name="trip_id">行程id: </string>
    <string name="trip_name">行程名: </string>
    <string name="trip_content">行程内容: </string>
    <string name="trip_time">行程时间: </string>
    <string name="delete">删除</string>
    <string name="update">更新</string>
    <string name="save">添加</string>
    <string name="text1">行程id:</string>
    <string name="text2">行程名称: </string>
    <string name="text3">行程时间: </string>
    <string name="text4">行程内容: </string>
    <string name="hint">删除时只需要输入这两项</string>

</resources>
