<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:paddingTop="10dp"
            android:text="@string/user_id"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/user_id"
            android:layout_width="305dp"
            android:hint="@string/hint"
            android:layout_height="match_parent"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:paddingTop="10dp"
            android:text="@string/trip_id"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/trip_id"
            android:layout_width="305dp"
            android:layout_height="match_parent"
            android:hint="@string/hint"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:paddingTop="10dp"
            android:text="@string/trip_name"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/trip_name"
            android:layout_width="298dp"
            android:layout_height="match_parent"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/trip_content"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/trip_content"
            android:layout_width="294dp"
            android:layout_height="match_parent"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/trip_time"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/trip_time"
            android:layout_width="291dp"
            android:layout_height="match_parent"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:onClick="delete"
            android:textSize="20sp" />

        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update"
            android:onClick="update"
            android:textSize="20sp" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:onClick="save"
            android:textSize="20sp" />


    </LinearLayout>


</LinearLayout>